MENSAJES DE VALIDACION EN ESPAÑOL E INGLES

--- a/src/main/resources/etiquetas_en.properties
+++ b/src/main/resources/etiquetas_en.properties
@@ -49,3 +49,16 @@ cl_integrantes Members
 
 cl_seleccion_defecto --Select--
 
+cl_mensaje_nombre_curso Enter course name
+cl_mensaje_descripcion_curso Enter course description
+cl_mensaje_tipo_curso Select Course Type
+cl_mensaje_modalidad_curso Select mode of payment
+cl_mensaje_duracion_curso Enter duration
+cl_mensaje_prerequisitos_curso Enter prerequisites
+cl_mensaje_creditos_curso Enter number of credits
+
+cl_cabecera_tabla_codigo Code
+cl_cabecera_tabla_descripcion Description
+
+
+cl_salir Logout
